--- a/008/index.html
+++ b/008/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Click na Imagem</h1>
-    <img src="img/lampada-on.jpg">
-    <img src="img/lampada.jpg">
+    <a href="#" onclick="edit()"><img src="img/lampada-on.jpg" id="edit-save" alt="Edit" /></a>
+
+    
+    <script src="app.js"></script>
 </body>
 </html>
